--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,9 +2,114 @@
 	text-align: center;
 }
 
-.App-logo {
-	height: 40vmin;
-	pointer-events: none;
+/* Main Page */
+.mainContainer {
+	margin-top: 5%;
+	display: flex;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.title {
+	letter-spacing: 2rem;
+	font-size: 5rem;
+	font-weight: bolder;
+	color: #363062;
+}
+
+.description {
+	text-align: center;
+	letter-spacing: 0.3rem;
+	font-size: 2rem;
+	font-weight: bolder;
+	color: #363062;
+}
+
+.mapPath {
+	margin-top: 2%;
+	padding: 1%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+/*button Map */
+
+.btnGo {
+	width: 10vw;
+	height: 5vh;
+	font-size: 1rem;
+	box-sizing: border-box;
+	border: 0;
+	border-radius: 20px;
+	color: #fff;
+	padding: 1em 1.8em;
+	background: #363062;
+	display: flex;
+	justify-content: center;
+	transition: 0.2s background;
+	align-items: center;
+	gap: 0.6em;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+.arrowContainer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.arrow {
+	margin-top: 1px;
+	width: 10px;
+	background: #363062;
+	height: 2px;
+	position: relative;
+	transition: 0.2s;
+}
+
+.arrow::before {
+	content: '';
+	box-sizing: border-box;
+	position: absolute;
+	border: solid #fff;
+	border-width: 0 2px 2px 0;
+	display: inline-block;
+	top: -3px;
+	right: 3px;
+	transition: 0.2s;
+	padding: 3px;
+	transform: rotate(-45deg);
+}
+
+.btnGo:hover {
+	background-color: #363062;
+}
+
+.btnGo:hover .arrow {
+	background: #fff;
+}
+
+.btnGo:hover .arrow:before {
+	right: 0;
+}
+
+/* kennel section */
+.KennelSection {
+	margin-top: 10%;
+	border: 5px solid #363062;
+	border-radius: 15px;
+	padding: 1%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.title_Kennel {
+	font-size: 1rem;
 }
 
 /* Register Form */
@@ -42,10 +147,23 @@
 .leaflet-container {
 	width: 80vh;
 	height: 80vh;
+	border-radius: 15px;
+	border: 5px solid #363062;
 }
 
 .kennelInfo {
+	border: 5px solid #363062;
 	float: right;
-	border: red 1px solid;
+	border-radius: 15px;
+	padding: 1%;
 	width: 50vh;
+}
+
+.btnCancel {
+	color: red;
+	cursor: pointer;
+}
+
+.kennelLocation {
+	color: red;
 }
