--- a/client/src/App.css
+++ b/client/src/App.css
@@ -332,7 +332,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	height: 30vh;
+	height: 60%;
 	border: 2px solid #e9d5ca;
 	border-radius: 15px;
 	background-color: #827397;
@@ -431,27 +431,29 @@
 /* Login */
 
 .LoginForm {
-	border: 1px red solid;
+	/* border: 1px red solid; */
 	display: flex;
-	width: 25%;
+	width: 35%;
 	margin: auto;
-	margin-top: -50vh;
+	margin-top: 30vh;
+	z-index: -1;
 }
 
 .InfoLog {
 	display: flex;
 	margin-left: 8%;
+	margin-top: 10%;
 	align-items: center;
-	border: 1px red solid;
+	/* border: 1px red solid; */
 }
 
 .inputs1 {
 	margin-top: 1%;
 	border: #363062 2px solid;
 	border-radius: 5px;
-	height: 1.5rem;
+	height: 1rem;
 	text-align: center;
-	height: 4vh;
+	height: 3.5vh;
 	margin-left: 1%;
 }
 
@@ -460,4 +462,31 @@
 	font-weight: bold;
 	margin-top: 3%;
 	margin-left: 1%;
+}
+
+.btnNewLogin {
+	cursor: pointer;
+	text-decoration: none;
+	margin-right: 0.5%;
+	display: flex;
+	margin-top: -9%;
+	margin-left: 120%;
+	justify-content: center;
+	align-items: center;
+	height: 4vh;
+	width: 8vw;
+	border: 2px solid #363062;
+	border-radius: 5px;
+	background: rgb(255, 255, 255);
+	color: #363062;
+	padding: 1%;
+	padding-right: 14px;
+	padding-left: 12px;
+	font-size: 1rem;
+}
+
+.btnNewLogin:hover {
+	background-color: #363062;
+	color: white;
+	border: 1px solid #363062;
 }
