--- a/client/src/App.css
+++ b/client/src/App.css
@@ -615,7 +615,7 @@
 	display: flex;
 	flex-direction: row;
 	margin-left: 2vw;
-	height: 90%;
+	height: 95%;
 	border: 1px #e9d5ca solid;
 	border-radius: 15px;
 }
@@ -634,7 +634,7 @@
 .moreInfo {
 	display: flex;
 	flex-direction: column;
-	border: 1px red solid;
+	/* border: 1px red solid; */
 	height: 180px;
 	width: 120px;
 	justify-content: space-between;
@@ -649,7 +649,7 @@
 
 .dogsImages {
 	display: flex;
-	border: 1px red solid;
+	/* border: 1px red solid; */
 	width: 200px;
 	height: 150px;
 }
